# emergency-mesh-comms-disaster-kit

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-dev.txt  requirements-lora.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker.yml  performance.yml  robot-tests.yml  security.yml  wasm-build.yml
.storybook/: main.ts  preview.ts
deploy/grafana/dashboards/: ai-agents.json  mesh-overview.json
deploy/phoenix/: config.yaml
deploy/prometheus/: prometheus.yml
deploy/tetragon/policies/: mesh-network-policy.yaml
docker/: Dockerfile.api  Dockerfile.mesh  Dockerfile.web  docker-compose.yml
docs/: CONTRIBUTING.md
docs/.ignore/: auto_commit.sh
docs/api/: openapi.yaml
docs/architecture/: ADR-001-dtn-mesh-approach.md  ADR-002-ai-agent-stack.md  ADR-003-transport-adapters.md  ADR-004-wasm-sandboxing.md  system-overview.md
docs/knowledge/: first_aid.md  ics_radio.md  sar.md  supply.md  troubleshooting.md
docs/plans/: claude_plan.md
docs/runbooks/: disaster-deployment.md
src/: config.py  logging_config.py
src/ai/agents/: anomaly_node.py  coordinator_graph.py  coordinator_state.py  disaster_crew.py  human_review.py  resource_node.py  routing_node.py  state_persistence.py  triage_node.py
src/ai/federated/: aggregator.py  flower_client.py  (+4 more)
src/api/: main.py
src/data/: health.py  retention.py
src/lora/: gateway.py  lora_transport.py  scanner.py  telemetry.py
src/mesh/: app.py  go.mod  go.sum
src/wasm/: Cargo.toml  engine.py  loader.py  plugin_verifier.py  wasi_config.py  watcher.py
src/web/: index.html  package.json  tsconfig.json  vite.config.ts
tests/performance/: locustfile.py
tests/robot/: common.resource  robot.yaml
(+209 files in other folders)
